# xp.ubq.fi

./: .clinerules  .env.example  .gitignore  .gitmodules  MASTER-PLAN.md  README.md  build.ts  deno.json  index.html  package.json  tsconfig.json  watch.ts
.github/reference-workflows/: bun-github-action.yml
.github/workflows/: deno-deploy-preview.yml  deno-deploy.yml
deno/: artifact-proxy.ts
docs/: active-context.md  deno-deploy-troubleshooting.md  design-language.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
src/: app.tsx  artifact-data.ts  calculate-contributor-xp-at-time.ts  constants.ts  data-transform.ts  download-artifact-zip.ts  download-artifact.ts  download-artifacts.ts  fetch-artifacts-list.ts  filter-leaderboard-by-time.ts  github-actions.ts  github-auth.ts  index.html  index.tsx  main.ts  normalize-org-repo-data.ts  server.ts  style.css  styles.css  types.ts  unzip-artifact.ts  utils.ts
src/analytics/: comment-quality.ts  contribution-breakdown.ts  contribution-overview.ts  review-metrics.ts
src/api/: activity-data-service.ts  supabase-client.ts  (+1 more)
tests/: download-artifacts.test.ts  final-artifact-e2e.test.ts  wasm-unzipper.test.ts
tools/: auto-commit-watch.ts  build.ts  dev-server.ts  dev.ts  generate-material-icons-map.ts  local-auth.ts  server.ts  start-dev.ts  symlink-static.ts  watch-server-changes.ts  watch.ts
wasm-unzipper/: Cargo.toml
wasm-unzipper/pkg/: wasm_unzipper.d.ts  wasm_unzipper.js  wasm_unzipper_bg.js  wasm_unzipper_bg.wasm  wasm_unzipper_bg.wasm.d.ts
wasm-unzipper/src/: lib.rs
(+53 files in other folders)
